--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Bruno Tagliapietra",email = "bruno.tagliapietra@gmail.com"}
 ]
 readme = "README.md"
-requires-python = "<4,>=3.9"
+requires-python = ">=3.13,<4"
 dependencies = [
     "pandas (>=2.3.1,<3.0.0)",
     "requests (>=2.32.4,<3.0.0)",
@@ -18,3 +18,8 @@ dependencies = [
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+[tool.poetry.dependencies]
+python = "3.13.5"
+[tool.poetry.group.dev.dependencies]
+pyinstaller = "^6.14.2"
+
