--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,19 +7,18 @@ authors = [
 ]
 readme = "README.md"
 requires-python = ">=3.13,<4"
-dependencies = [
-    "pandas (>=2.3.1,<3.0.0)",
-    "requests (>=2.32.4,<3.0.0)",
-    "tkcalendar (>=1.6.1,<2.0.0)",
-    "reportlab (>=4.4.2,<5.0.0)"
-]
-
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
 [tool.poetry.dependencies]
 python = "3.13.5"
+pandas = ">=2.3.1,<3.0.0"
+requests = ">=2.32.4,<3.0.0"
+tkcalendar = ">=1.6.1,<2.0.0"
+reportlab = ">=4.4.2,<5.0.0"
+
 [tool.poetry.group.dev.dependencies]
 pyinstaller = "^6.14.2"
 
